# DFGEngine

./: .gitmodules  CMakeLists.txt  README.md  setup.bat
DFGEditor/: CMakeLists.txt
DFGEngine/: CMakeLists.txt
DFGEngine/src/: DFGEngine.h  dfgpch.cpp  dfgpch.h
DFGEngine/src/DFGEngine/Audio/: AudioBuffer.cpp  AudioBuffer.h  AudioDevice.cpp  AudioDevice.h  AudioSource.cpp  AudioSource.h  SoundEngine.cpp  SoundEngine.h
DFGEngine/src/DFGEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  TextEvent.h
DFGEngine/src/DFGEngine/Math/: Math.cpp  Math.h
DFGEngine/src/DFGEngine/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
DFGEngine/src/DFGEngine/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
DFGEngine/src/DFGEngine/Utils/: PlatformUtils.h
DFGEngine/src/DFGEngine/core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Timer.h  Timestep.h  Window.cpp  Window.h
DFGEngine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
DFGEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt
Sandbox/assets/scenes/: Example.alt  fake3dscene.alt
Sandbox/assets/scripts/: test.lua
Sandbox/assets/shaders/: FlatColor.glsl  Renderer2D_Quad.glsl  Renderer2D_Text.glsl  Texture.glsl
Sandbox/src/: Game.cpp  Game.h  LuaBinding.h  Network.cpp  Network.h  Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp  TestRegistration.h
Sandbox/src/Game/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  Entity.cpp  Entity.h  GameCamera.cpp  GameCamera.h  Level.cpp  Level.h  Paddle.cpp  Paddle.h  Utility.cpp  Utility.h
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/src/: main.cpp
